<resources>
    <string name="app_name">Ma Pharmacie</string>
    <string name="my_notifications">mes notifications</string>
    <string name="my_medicines">mes  medicaments</string>
    <string name="appointment">rendez-vous</string>
    <string name="donation">donation</string>
    <string name="pharmacy">pharmacies</string>
    <string name="family">famille</string>
    <string name="protector">protecteur</string>
    <string name="tracker">suivi</string>
    <string name="feedback">feedback</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile_photo">photo de profil</string>
    <string name="medication_name">nom de médicament</string>
    <string name="tablets">Comprimés</string>
    <string name="Liquids">liquides</string>
    <string name="Topical">Topiques</string>
    <string name="Injectables">injectables</string>
    <string name="medication_forme">la forme de médicament</string>
    <string name="analgesics">\analgésiques \</string>
    <string name="analgesics_explanation"> : médicaments utilisés pour soulager la douleur</string>
    <string name="antibiotics">\antibiotiques \</string>
    <string name="antibiotics_explanation"> : médicaments utilisés pour traiter les infections bactériennes.</string>
    <string name="hormones">\hormones \</string>
    <string name="hormones_explation"> : elles sont utilisées pour réguler les fonctions corporelles.</string>
    <string name="antivirals">\antiviraux \</string>
    <string name="antivirals_explanation"> : ils sont utilisés pour traiter les infections virales.</string>
    <string name="pill_form">Comprimés,Capsules ou gélule</string>
    <string name="liquid_form">suspensions,sirops ou solutions</string>
    <string name="cream_form">crèmes, les pommades, les gels</string>
    <string name="injection_form">injection intramusculaire,sous-cutanée ou intraveineuse</string>
    <string name="next">suivant</string>
    <string name="skip_all">Ignorer tout</string>
    <string name="back">retour</string>
    <string name="forget_password">mot de passe oublié</string>
    <string name="dose">Dose</string>
    <string name="programme">Programme</string>
    <string name="quantity">Quantité</string>
    <string name="medicationNameTransition">medication_name_transition</string>
    <string name="welcome">bienvenue</string>
    <string name="Invalid_email_address">adresse email inexistante</string>
    <string name="wrong_password">mot de passe incorrect</string>
    <string name="i_already_have_an_account">j\'ai deja un compte,</string>
    <string name="otp_false_code">Code incorrect</string>
    <string name="email">email</string>
    <string name="email_invalid">adresse e-mail invalide.</string>
    <string name="no_internet">Vous n\'avez pas d\'Internet.</string>
    <string name="capsule">Capsule</string>
    <string name="bottles">bouteille</string>
    <string name="injection">Injection</string>
    <string name="pill">Comprimé</string>
    <string name="permission_required">Permission requise</string>
    <string name="microphone_permission_explanation">Pour enregistrer de l\'audio, l\'application a besoin de la permission d\'accéder au microphone de votre appareil. Cliquez sur \'Accorder\' pour permettre à l\'application d\'accéder au microphone.</string>
    <string name="accept">Accorder</string>
    <string name="deny">Annuler</string>
    <string name="access_to_micro_refused">Accès au microphone refusé</string>
    <string name="explanation">Explication</string>
    <string name="choose_medication_hint">chercher un médicament</string>
    <string name="my_reminders">mes rappels</string>
    <string name="see_more_label"><u> voir plus</u></string>


</resources>