<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/notificationFragment"
        android:icon="@drawable/baseline_dashboard_24"
        android:iconTint="@color/white"
        android:checkable="true"/>
    <item
        android:id="@+id/medicineFragment"
        android:title="@string/my_medicines"
        android:icon="@drawable/medication_reorder"
        android:iconTint="@color/white"
        android:checkable="true"/>

<item
        android:icon="@drawable/maps_logo"

        android:title="pharmacies proches"
        android:checkable="false"/>


    <item
        android:id="@+id/checkUpFragment"
        android:icon="@drawable/maps_logo"
        android:title="@string/appointment"
        android:iconTint="@color/white"
        android:checkable="true"/>
    <item
        android:id="@+id/accelerate"
        android:icon="@drawable/donation"
        android:title="@string/donation"
        android:iconTint="@color/white"

        android:checkable="true"/>





</menu>