<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_green"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.reminder_detail.ReminderDetailsFragment">

    <!-- TODO: Update blank fragment layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/first_part"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.3"
        android:background="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/hello_blank_fragment" >

        <ImageView
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:src="@drawable/ic_baseline_arrow_back_24"
            />

        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/pillule"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="EFFERALGAN"
            app:layout_constraintTop_toBottomOf="@id/image"
            android:gravity="center_horizontal"
            android:textSize="30sp"
            android:transitionName="@string/medicationNameTransition"
            android:textColor="@color/dark_green"
            android:textStyle="bold"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/second_part"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:background="@drawable/rounded_corner"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@id/first_part"
        >
        <TextView
            android:id="@+id/doseTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:text="@string/dose"
            android:textSize="23sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textColor="@color/dark_green"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/doseValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:text="2 capsules | 400 mg"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/doseTitle"
            android:textColor="@android:color/darker_gray"
            />

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/firstDivider"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="12dp"
            app:dividerColor="@android:color/darker_gray"
            app:layout_constraintTop_toBottomOf="@id/doseValue"/>

        <TextView
            android:id="@+id/ProgramTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:text="@string/programme"
            android:textSize="23sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/firstDivider"
            android:textColor="@color/dark_green"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/ProgramValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:text=" Chaque jour \n 30 jours en total | 5 jours restés\n apres repas \n
8:00 | 15:00 | 20:00     "
            android:textSize="16sp"
            android:lineSpacingExtra="2dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ProgramTitle"
            android:textColor="@android:color/darker_gray"
            />

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/secondDivider"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="12dp"
            app:dividerColor="@android:color/darker_gray"
            app:layout_constraintTop_toBottomOf="@id/ProgramValue"/>


        <TextView
            android:id="@+id/Quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:text="@string/quantity"
            android:textSize="23sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/secondDivider"
            android:textColor="@color/dark_green"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/quantityValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:text="50 totales | 5 restants "
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/Quantity"
            android:textColor="@android:color/darker_gray"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/modify"
        android:layout_width="110dp"
        android:layout_height="60dp"
        app:layout_constraintTop_toBottomOf="@id/second_part"
        app:backgroundTint="@color/dark_green"
        app:strokeColor="@color/dark_green"
        app:cornerRadius="20dp"
        android:text="modifier"
        android:textSize="12dp"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="15dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>