<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_green"
    android:clickable="true"
  android:focusable="true"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.login.LoginFragment">

    <!-- TODO: Update blank fragment layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintHeight_percent="0.35"
        android:text="@string/hello_blank_fragment" >

        <TextView
            android:id="@+id/appName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toTopOf="parent"
            android:textColor="@color/white"
            android:text="@string/app_name"
            android:gravity="center_horizontal"
            android:textSize="25sp"
            android:textStyle="bold"
            />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="20dp"
            android:layout_marginTop="25dp"
            app:layout_constraintTop_toBottomOf="@id/appName"
            android:src="@drawable/medication"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/body"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:boxStrokeColor="@color/dark_green"
        android:background="@drawable/rounded_corners_on_top"
        app:layout_constraintTop_toBottomOf="@id/header"
        app:layout_constraintBottom_toBottomOf="parent"

        android:backgroundTint="@color/white"
        >
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailOrPhoneNumberEt"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="60dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:boxStrokeColor="@color/dark_green"
        app:boxStrokeWidth="2dp"
        app:boxCornerRadiusTopStart="20dp"
        app:boxCornerRadiusBottomEnd="20dp"
       app:boxCornerRadiusBottomStart="20dp"
        android:hint="Email or numero de téléphone "
        android:textColorHint="@null"
        app:hintTextColor="@color/dark_green"
        app:boxCornerRadiusTopEnd="20dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/black"
            />
    </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password"
            app:layout_constraintTop_toBottomOf="@id/emailOrPhoneNumberEt"
            android:layout_marginTop="25dp"
            android:layout_width="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_height="wrap_content"
            app:boxStrokeColor="@color/dark_green"
            app:boxStrokeWidth="2dp"
            app:boxCornerRadiusTopStart="20dp"
            app:boxCornerRadiusBottomEnd="20dp"
            app:boxCornerRadiusBottomStart="20dp"
            android:hint="mot de passe"
            android:textColorHint="@null"
            app:hintTextColor="@color/dark_green"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/dark_green"

            app:boxCornerRadiusTopEnd="20dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/black"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/forgetPassword"
            android:layout_width="match_parent"
            android:gravity="end"
            android:textSize="13sp"
            android:layout_marginEnd="20dp"
            android:textColor="@color/dark_green"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@id/password"
            android:layout_height="wrap_content"
            android:text="@string/forget_password"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/loginBt"
            android:layout_width="200dp"
            android:layout_height="60dp"
            app:layout_constraintTop_toBottomOf="@id/forgetPassword"
            android:backgroundTint="@color/dark_green"
            android:layout_marginTop="20dp"

            android:text="se connecter"
            android:textSize="12sp"
            app:iconGravity="textEnd"

            app:cornerRadius="40dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/left_divider"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="20dp"
            app:layout_constraintWidth_percent="0.3"
            android:layout_marginStart="30dp"
            app:dividerColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/loginBt"/>
        <TextView
            app:layout_constraintStart_toEndOf="@id/left_divider"
            app:layout_constraintEnd_toStartOf="@id/right_divider"
            app:layout_constraintTop_toTopOf="@id/left_divider"
            app:layout_constraintBottom_toBottomOf="@id/left_divider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="or"/>
        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/right_divider"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="20dp"
            app:layout_constraintWidth_percent="0.3"
            android:layout_marginEnd="30dp"
            app:dividerColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/loginBt"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/google_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            app:layout_constraintTop_toBottomOf="@id/right_divider"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="@id/loginBt"
            app:layout_constraintEnd_toEndOf="@id/loginBt"
            app:cornerRadius="40dp"
            app:strokeColor	="@color/black"
            app:iconGravity="textStart"
            android:text="continuer avec google"
            app:iconTint="@null"
            android:textColor="@color/black"
            android:textSize="10sp"
            app:strokeWidth="1dp"
            app:icon="@drawable/google_sign_in"
            app:iconSize="26dp"
            />

        <TextView
            android:id="@+id/isNewUSer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/google_sign_in"
            android:layout_marginStart="-20dp"
            android:textSize="13sp"
            app:layout_constraintTop_toBottomOf="@id/google_sign_in"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="Etes vous nouveau?"/>
        <TextView
            android:id="@+id/createNewAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/isNewUSer"
            android:textSize="13sp"
            android:paddingStart="5dp"
            android:textColor="@color/dark_green"
            app:layout_constraintTop_toBottomOf="@id/google_sign_in"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="créer un compte"/>



    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>