<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_green"
    android:clickable="true"
    android:focusable="true"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <!-- TODO: Update blank fragment layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintHeight_percent="0.35"
        android:text="@string/hello_blank_fragment" >

        <TextView
            android:id="@+id/appName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toTopOf="parent"
            android:textColor="@color/white"
            android:text="@string/app_name"
            android:gravity="center_horizontal"
            android:textSize="25sp"
            android:textStyle="bold"
            />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="20dp"
            android:layout_marginTop="25dp"
            app:layout_constraintTop_toBottomOf="@id/appName"
            android:src="@drawable/medication"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/body"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:boxStrokeColor="@color/dark_green"
        android:background="@drawable/rounded_corners_on_top"
        app:layout_constraintTop_toBottomOf="@id/header"
        app:layout_constraintBottom_toBottomOf="parent"

        android:backgroundTint="@color/white"
        >
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/usernameET"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:boxStrokeColor="@color/dark_green"
            app:boxStrokeWidth="2dp"
            app:boxCornerRadiusTopStart="20dp"
            app:boxCornerRadiusBottomEnd="20dp"
            app:boxCornerRadiusBottomStart="20dp"
            android:hint="Nom d'utilisateur "
            android:textColorHint="@null"
            android:theme="@style/ThemeOverlay.AppTheme.TextInputEditText.Outlined"
            app:hintTextColor="@color/dark_green"
            app:boxCornerRadiusTopEnd="20dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/black"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:id="@+id/usernameError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/usernameET"
            app:layout_constraintStart_toStartOf="@id/usernameET"
            android:text="merci de remplir ce champs."
            android:visibility="invisible"
            android:textColor="@color/red"
            android:textSize="12sp"


            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailEt"
            app:layout_constraintTop_toBottomOf="@id/usernameError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:boxStrokeColor="@color/dark_green"
            app:boxStrokeWidth="2dp"
            app:boxCornerRadiusTopStart="20dp"
            app:boxCornerRadiusBottomEnd="20dp"
            app:boxCornerRadiusBottomStart="20dp"
            android:hint="Email "
            android:textColorHint="@null"
            app:hintTextColor="@color/dark_green"
            app:boxCornerRadiusTopEnd="20dp"
            android:theme="@style/ThemeOverlay.AppTheme.TextInputEditText.Outlined"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/black"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/emailError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/emailEt"
            app:layout_constraintStart_toStartOf="@id/emailEt"
            android:visibility="invisible"
            android:textColor="@color/red"
            android:text="adresse e-mail invalide."
            android:textSize="12sp"


            />



        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password"
            app:layout_constraintTop_toBottomOf="@id/emailError"

            android:layout_width="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_height="wrap_content"
            app:boxStrokeColor="@color/dark_green"
            app:boxStrokeWidth="2dp"
            app:boxCornerRadiusTopStart="20dp"
            app:boxCornerRadiusBottomEnd="20dp"
            app:boxCornerRadiusBottomStart="20dp"
            android:hint="Mot de passe"
            android:textColorHint="@null"
            app:hintTextColor="@color/dark_green"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/dark_green"
            app:helperText=""
            android:theme="@style/ThemeOverlay.AppTheme.TextInputEditText.Outlined"
            app:boxCornerRadiusTopEnd="20dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/black"
                android:inputType="textPassword"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/passwordError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/password"
            app:layout_constraintStart_toStartOf="@id/password"
            android:text="mot de passe doit contenir plus de 8 carachteres."
            android:visibility="invisible"
            android:textColor="@color/red"
            android:textSize="12sp"

            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/confirmPassword"
            app:layout_constraintTop_toBottomOf="@id/passwordError"

            android:layout_width="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_height="wrap_content"
            app:boxStrokeColor="@color/dark_green"
            app:boxStrokeWidth="2dp"
            app:boxCornerRadiusTopStart="20dp"
            app:boxCornerRadiusBottomEnd="20dp"
            app:boxCornerRadiusBottomStart="20dp"
            android:hint="Confirmer mot de passe"
            android:textColorHint="@null"
            app:hintTextColor="@color/dark_green"
            app:endIconTint="@color/dark_green"
            app:endIconMode="password_toggle"
            android:theme="@style/ThemeOverlay.AppTheme.TextInputEditText.Outlined"
            app:boxCornerRadiusTopEnd="20dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/black"
                android:inputType="textPassword"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/confirmPasswordError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/confirmPassword"
            app:layout_constraintStart_toStartOf="@id/confirmPassword"
            android:text="Le mot de passe doit être identique à la confirmation du mot de passe."
            android:textColor="@color/red"
            android:visibility="invisible"
            android:textSize="12sp"

            />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/registerBt"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:backgroundTint="@color/dark_green"
            android:text="S'inscrire"
            android:textSize="12sp"
            app:cornerRadius="40dp"
            app:iconGravity="textEnd"
            android:layout_marginTop="3dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/confirmPasswordError" />

        <TextView
            android:id="@+id/iHaveAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/i_already_have_an_account"
            app:layout_constraintStart_toStartOf="@id/registerBt"
            android:layout_marginStart="-10dp"
            android:textSize="14sp"
            android:layout_marginTop="12sp"
            app:layout_constraintTop_toBottomOf="@id/registerBt"
            />
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            app:layout_constraintStart_toEndOf="@id/iHaveAccount"
            android:text="se connecter"
            android:textColor="@color/dark_green"
            android:textSize="14sp"
            android:layout_marginTop="3dp"
            android:layout_marginLeft="5sp"
            app:layout_constraintBottom_toBottomOf="@id/iHaveAccount"

            />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>